# GPT-SoVITS-Experiment

./: Makefile  insert_symbol.ipynb  pyproject.toml  requirements.txt  test.ipynb  th_symbols2.txt  webui.py
GPT_SoVITS/: inference_webui.py  s1_train.py  s1big2.yaml  s2_train.py
GPT_SoVITS/AR/models/: t2s_model.py
GPT_SoVITS/configs/: s1longer-v2.yaml  s2_manual.json
GPT_SoVITS/prepare_datasets/: 1-get-text.py  2-get-hubert-wav32k.py  3-get-semantic.py
GPT_SoVITS/text/: __init__.py  cleaner.py  english.py  symbols.py  symbols2.py  test_cleean.ipynb  test_thai_debug.ipynb  thai.py
gpt_sovits_experiment.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tools/i18n/locale/: en_US.json
